Correction alignement footer

--- a/css/style.css
+++ b/css/style.css
@@ -616,6 +616,9 @@ img {
   font-size: 12px;
   align-items: center;
 }
+.footer .fa-handshake-angle {
+  font-size: 8px;
+}
 
 .bloc_page_menu {
   background-color: rgb(247, 247, 247);
