--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -27,4 +27,8 @@
         font-size: 12px;
         align-items: center;
     }
+    .fa-handshake-angle{
+        font-size: 8px;
+    }
 }
+
